--- a/about.html
+++ b/about.html
@@ -1,1 +1,22 @@
-<h1>Test page</h1>
+<head>
+    <meta charset="UTF-8">
+    <title> Verb to Be</title>
+    <link rel="stylesheet" href="style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Poetsen+One&display=swap" rel="stylesheet">
+</head>
+
+<h1>Verb to be</h1>
+
+<p>We use verb to be to talk </p>
+
+
+<Style>
+    h1{
+        text-align: center;
+        color: blueviolet;
+        font-style: italic;
+     }   
+
+</Style>
