--- a/index.html
+++ b/index.html
@@ -1,9 +1,15 @@
 <!DOCTYPE html>
 <html lang="English">
 
+
     <head>
         <meta charset="UTF-8">
         <title> Uncle John English</title>
+        <link rel="stylesheet" href="style.css" />
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Poetsen+One&display=swap" rel="stylesheet">
+        
     </head>
 
     <body>
@@ -11,7 +17,7 @@
     <h1 draggable="true">Welcome to Uncle John</h1>
     <h2>In this website you're going to find explanation, exercises, videos and games to practice English</h2>
     <h3>Select the topic you would like to study:</h3>
-    <img href=""/>
+
     <ol start="1">
         <li><a href="./about.html">Verb to be</a></li>
         <br>
@@ -19,9 +25,9 @@
         <br>
         <li><a href="">Present Continuous</a></li>
         <br>
-        <li><a href="">Can</a></li>
+        <li><a href=""> Simple Past</a></li>
         <br>
-        <li><a href="">Will</a></li>
+        <li><a href="">Past Continuous</a></li>
         </ol>
 
 
@@ -32,3 +38,4 @@
 
 
 </html>
+
