--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
     <head>
         <meta charset="UTF-8">
-        <title> Uncle John English</title>
+        <title> The English Repository</title>
         <link rel="stylesheet" href="style.css" />
         <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -13,24 +13,32 @@
     </head>
 
     <body>
-
-    <h1 draggable="true">Welcome to Uncle John</h1>
-    <h2>In this website you're going to find explanation, exercises, videos and games to practice English</h2>
+    
+    <div id="header"> 
+        <p class="title one"> Home </p>
+        <p class="title two"> Contact </p>
+        <p class="title three"> About me</p>
+    </div>
+    
+    <div class="box">
+        <h1 draggable="true">Welcome to The English Repository</h1> 
+        <h2>In this website you're going to find explanation, exercises, videos and games to practice English</h2>
+    </div>
+    <br>
     <h3>Select the topic you would like to study:</h3>
+    <br>
+    <div class="boxofcontent">
+    <ul id="content">
+        <li class="topic name1"><a href="https://1drv.ms/p/s!AhXRv7fGTXu3gsMuVE6zpBSGqDRn7Q?e=8W8l6i&nav=eyJzSWQiOjI2NCwiY0lkIjo0MDEwMzg0MDM0fQ" class="links">Review 6th year</a></li>
+        <br>
+        <li class="topic name2"><a href="https://1drv.ms/p/s!AhXRv7fGTXu3gsMuVE6zpBSGqDRn7Q?e=SAeRAg&nav=eyJzSWQiOjI2NSwiY0lkIjo1NTc5MTY0ODl9" class="links">Review 7th year</a></li>
+        <br>
+        <li class="topic name3"><a href=""class="links">Review 8th year</a></li>
+        <br>
+        <li class="topic name4"><a href=""class="links">Review 9th year</a></li>
+        </ul>
 
-    <ol start="1">
-        <li><a href="./about.html">Verb to be</a></li>
-        <br>
-        <li><a href="">Present simple</a></li>
-        <br>
-        <li><a href="">Present Continuous</a></li>
-        <br>
-        <li><a href=""> Simple Past</a></li>
-        <br>
-        <li><a href="">Past Continuous</a></li>
-        </ol>
-
-
+    </div>
 
     </body>
 
