--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <body>
     
     <div id="header"> 
-        <p class="title one"> Home </p>
+        <p class="title one"> <a href="about.html"> </a> Home </p>
         <p class="title two"> Contact </p>
         <p class="title three"> About me</p>
     </div>
@@ -27,16 +27,11 @@
     <br>
     <h3>Select the topic you would like to study:</h3>
     <br>
-    <div class="boxofcontent">
-    <ul id="content">
-        <li class="topic name1"><a href="https://1drv.ms/p/s!AhXRv7fGTXu3gsMuVE6zpBSGqDRn7Q?e=8W8l6i&nav=eyJzSWQiOjI2NCwiY0lkIjo0MDEwMzg0MDM0fQ" class="links">Review 6th year</a></li>
-        <br>
-        <li class="topic name2"><a href="https://1drv.ms/p/s!AhXRv7fGTXu3gsMuVE6zpBSGqDRn7Q?e=SAeRAg&nav=eyJzSWQiOjI2NSwiY0lkIjo1NTc5MTY0ODl9" class="links">Review 7th year</a></li>
-        <br>
-        <li class="topic name3"><a href=""class="links">Review 8th year</a></li>
-        <br>
-        <li class="topic name4"><a href=""class="links">Review 9th year</a></li>
-        </ul>
+    <div id="content">
+        <p class="topic name1"><a href="https://1drv.ms/p/s!AhXRv7fGTXu3gsMuVE6zpBSGqDRn7Q?e=8W8l6i&nav=eyJzSWQiOjI2NCwiY0lkIjo0MDEwMzg0MDM0fQ" class="links">Review 6th year</a></p>
+        <p class="topic name2"><a href="https://1drv.ms/p/s!AhXRv7fGTXu3gsMuVE6zpBSGqDRn7Q?e=SAeRAg&nav=eyJzSWQiOjI2NSwiY0lkIjo1NTc5MTY0ODl9" class="links">Review 7th year</a></p>
+        <p class="topic name3"><a href=""class="links">Review 8th year</a></p>
+        <p class="topic name4"><a href=""class="links">Review 9th year</a></p>
 
     </div>
 
